fixed bug on mobiles: screen goes left and make empty space at right side

--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,12 @@ body {
    margin: 0 auto 0 auto;
 }
 
+@media (max-width: 580px) {
+   .container {
+      overflow-x: hidden;
+   }
+}
+
 @media (min-width: 768px) {
    .container {
       width: 750px;
@@ -149,6 +155,7 @@ header .container .links ul::before {
    position: absolute;
    top: -37px;
    right: -6px;
+   z-index: 10;
 }
 header .container .links ul li a {
    display: block;
@@ -212,6 +219,7 @@ header .container .links ul li:not(:last-child) a {
    text-align: center;
    padding: 20px;
 }
+
 .features .container .feat i {
    color: var(--primary-color);
 }
@@ -376,6 +384,13 @@ header .container .links ul li:not(:last-child) a {
    z-index: -1;
    right: -155px;
    top: -30px;
+}
+
+@media (max-width: 700px) {
+   .about .about-content .image::after,
+   .about .about-content .image::before {
+      display: none;
+   }
 }
 
 .about .about-content .text {
